src/objects/PagesApi__Skip_Logic_Rule__c.object
<CustomObject>
    <fields>
        <fullName>PagesApi__Answer__c</fullName>
        <description>Value on which the rule is activated.</description>
        <inlineHelpText>Value on which the rule is activated.</inlineHelpText>
        <label>Answer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Destination__c</fullName>
        <description>List of fields that should appear on selecting the value matching the answer field value(CSV).</description>
        <inlineHelpText>List of fields that should appear on selecting the value matching the answer field value(CSV).</inlineHelpText>
        <label>Destination</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field__c</fullName>
        <description>CSV field with list of fields the rule defined against.</description>
        <inlineHelpText>CSV field with list of fields the rule defined against.</inlineHelpText>
        <label>Field</label>
        <referenceTo>PagesApi__Field__c</referenceTo>
        <relationshipLabel>Skip Logic Rules</relationshipLabel>
        <relationshipName>Skip_Logic_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Skip Logic Rule</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Skip Logic Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skip Logic Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>